# modern-cpp-template

./: CMakeLists.txt
.github/: workflows.yml
.github/workflows/: build.yml
docs/: README.md  _sidebar.md  index.html
examples/: CMakeLists.txt
src/: CMakeLists.txt  constants.hpp.in  lib.cpp
tests/: CMakeLists.txt  Main.cpp
